# goit-pythonweb-hw-06

./: db.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 5988945e4f03_update_relationship_of_teacher_and_.py  880696b3cc04_description_of_changes.py  9cddd97c519b_update_relationship_of_student_and_.py  cabec15fd133_update_relationship_of_marks_students_.py
models/: __init__.py  groups.py  marks.py  students.py  subjects.py  teachers.py
